--- a/repo/requirements.txt
+++ b/repo/requirements.txt
@@ -1,15 +1,22 @@
-absl-py==2.2.0
+absl-py==2.2.1
+annotated-types==0.7.0
+anyio==4.9.0
 astunparse==1.6.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+fastapi==0.115.12
 flatbuffers==25.2.10
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.71.0
+h11==0.14.0
 h5py==3.13.0
 idna==3.10
+imbalanced-learn==0.13.0
+imblearn==0.0
 joblib==1.4.2
-keras==3.9.0
+keras==3.9.1
 libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -23,23 +30,31 @@ optree==0.14.1
 packaging==24.2
 pandas==2.2.3
 protobuf==5.29.4
+pydantic==2.11.1
+pydantic_core==2.33.0
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
-pytz==2025.1
+python-multipart==0.0.20
+pytz==2025.2
 requests==2.32.3
-rich==13.9.4
+rich==14.0.0
 scikit-learn==1.6.1
 scipy==1.15.2
-setuptools==77.0.3
+setuptools==78.1.0
 six==1.17.0
+sklearn-compat==0.1.3
+sniffio==1.3.1
+starlette==0.46.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
-termcolor==2.5.0
+termcolor==3.0.0
 threadpoolctl==3.6.0
-typing_extensions==4.12.2
+typing-inspection==0.4.0
+typing_extensions==4.13.0
 tzdata==2025.2
 urllib3==2.3.0
+uvicorn==0.34.0
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
